2010-02-07  Tadashi MATSUO  <tad@mymail.twin.jp>

	* test/test-twittering-mode.el (test-format-status): replace the
	format specifier "%t" with "%T".

	* twittering-mode.el (twittering-extract-timeline-spec): fix the
	regexp for "filter" timeline spec.
	* test/test-twittering-mode.el (timeline-spec): add a test for
	trailing backslashes.

2010-02-07  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get): Add an optional
	argument for a response data format.
	(twittering-http-post): Likewise.
	(twittering-get-list-index): Adjust callers.
	(twittering-http-post): Delete unused argument `contents'.

	* twittering-mode.el (twittering-http-get-default-sentinel): Check
	status-code here instead of `twittering-http-default-sentinel'.
	(twittering-http-get-list-index-sentinel): Likewise.
	(twittering-http-post-default-sentinel): Likewise.
	(twittering-http-default-sentinel): Adjust callers.

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Set "" explicitly if user does not have a list.

2010-02-06  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-default-sentinel): New defun
	to share code between `twittering-http-get-default-sentinel',
	`twittering-http-get-list-index-sentinel', and
	`twittering-http-post-default-sentinel'.
	(twittering-http-get-default-sentinel): Adjust function.
	(twittering-http-get-list-index-sentinel): Likewise.
	(twittering-http-post-default-sentinel): Likewise.
	(twittering-start-http-ssl-session): Adjust callers.
	(twittering-start-http-non-ssl-session): Likewise.

2010-02-06  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-edit-post-status): Don't add
	parameter `in_reply_to_status_id' if the tweet does not begin
	with `@'.
	(twittering-update-status-from-minibuffer): Likewise.

	* twittering-mode.el (twittering-status-not-blank-p): Fix a regexp
	pattern for USER.
	(twittering-status-to-status-datum): Likewise.